--- a/options.conf
+++ b/options.conf
@@ -2,7 +2,7 @@
 name = R-styler
 url = https://cran.r-project.org/src/contrib/styler_1.0.2.tar.gz
 archives = 
-giturl = 
+giturl = https://github.com/r-lib/styler.git
 
 [autospec]
 # build 32 bit libraries
