--- a/options.conf
+++ b/options.conf
@@ -1,6 +1,6 @@
 [package]
 name = R-styler
-url = https://cran.r-project.org/src/contrib/styler_1.1.0.tar.gz
+url = https://cran.r-project.org/src/contrib/styler_1.1.1.tar.gz
 archives = 
 giturl = https://github.com/r-lib/styler.git
 
@@ -52,7 +52,7 @@ use_avx512 = false
 # add clang flags
 use_clang = false
 # configure build for lto
-use_lto = false
+use_lto = true
 # require package verification for build
 verify_required = false
 
