--- a/options.conf
+++ b/options.conf
@@ -1,9 +1,10 @@
 [package]
 name = R-styler
-url = https://cran.r-project.org/src/contrib/styler_1.3.0.tar.gz
+url = https://cran.r-project.org/src/contrib/styler_1.3.2.tar.gz
 archives = 
 giturl = https://github.com/r-lib/styler.git
 domain = 
+alias = 
 
 [autospec]
 # build 32 bit libraries
