--- a/options.conf
+++ b/options.conf
@@ -1,6 +1,6 @@
 [package]
 name = R-styler
-url = https://cran.r-project.org/src/contrib/styler_1.8.1.tar.gz
+url = https://cran.r-project.org/src/contrib/styler_1.9.0.tar.gz
 archives = 
 giturl = https://github.com/r-lib/styler.git
 domain = 
@@ -27,6 +27,8 @@ conservative_flags = false
 dev_requires_extras = false
 # pass -ffast-math to compiler
 fast-math = false
+# compile full (traditional) debug info
+full-debug-info = false
 # optimize build for speed over size
 funroll-loops = false
 # set flags to smallest -02 flags possible
